--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <nav class="navbar navbar-expand-lg navbar-light ">
 
 
-        <div class="container-fluid bg-transparent">
+        <div class="container-fluid navbersColor">
 
 
           
-          <a class="navbar-brand"href="#">  <h3 class="name-company">  <img class="logo-image" src="logo/logo1.jpg" alt="">Programing.com</h3></a>
+          <a class="navbar-brand"href="#">  <h3 class="name-company">  <img class="logo-image" src="logo/logo.png">Programing.com</h3></a>
 
 
 
@@ -42,12 +42,12 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 
                 <div class="navbar-nav feachers ">
-                    <a class="nav-link text-dark"  href="#">Future</a>
-                    <a class="nav-link text-dark"  href="#">Blogs</a>
-                    <a class="nav-link text-dark"  href="#">Videos</a>
-                    <a class="nav-link text-dark" href="#">Partners</a>
-                    <a class="nav-link text-dark" href="#">News</a>
-                    <button class="butifull-button"> <a class="nav-link text-dark" href="#">Contact us</a></button>
+                    <a class="nav-link text-light feachers2"  href="#">Future</a>
+                    <a class="nav-link text-light feachers2"  href="#">Blogs</a>
+                    <a class="nav-link text-light feachers2"  href="#">Videos</a>
+                    <a class="nav-link text-light feachers2" href="#">Partners</a>
+                    <a class="nav-link text-light feachers2" href="#">News</a>
+                    <button class="butifull-button"> <a class="nav-link text-light" href="#">Contact us</a></button>
                 </div>
                 
           </div>
