--- a/index.html
+++ b/index.html
@@ -28,26 +28,24 @@
 
 
 
-          <button 
-                class="navbar-toggler" 
+          <button  class="navbar-toggler" id="tapButtonToggler" 
                 type="button " 
                 data-bs-toggle="collapse"
                 data-bs-target="#navbarNavAltMarkup" 
                 aria-controls="navbarNavAltMarkup" 
                 aria-expanded="false"
                 aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon "></span>
           </button>
           
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 
                 <div class="navbar-nav feachers ">
-                    <a class="nav-link text-light feachers2"  href="#">Future</a>
-                    <a class="nav-link text-light feachers2"  href="#">Blogs</a>
-                    <a class="nav-link text-light feachers2"  href="#">Videos</a>
-                    <a class="nav-link text-light feachers2" href="#">Partners</a>
-                    <a class="nav-link text-light feachers2" href="#">News</a>
-                    <button class="butifull-button"> <a class="nav-link text-light" href="#">Contact us</a></button>
+                  <button class="butifull-button"> <a class="nav-link text-light" href="#">Home</a></button>
+                  <button class="butifull-button"> <a class="nav-link text-light" href="#">Videos</a></button>
+                  <button class="butifull-button"> <a class="nav-link text-light" href="#">Blogs</a></button>
+                  <button class="butifull-button"> <a class="nav-link text-light" href="#">Works</a></button>
+                  <button class="butifull-button"> <a class="nav-link text-light" href="#">Contact-us</a></button>
                 </div>
                 
           </div>
