--- a/index.html
+++ b/index.html
@@ -53,7 +53,29 @@
       </nav>
 <!---NAVER END-->
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <!--Carousel at the bottom-->
+
+
+      <!------CAROUSEL   CONTROLLER   SLIDE  ICON  WHITE  and DARK   AT THE CONTROLLER-END-------->
         <div class="container">
             <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
@@ -61,6 +83,9 @@
                   <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
                   <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
                 </div>
+               <!------CAROUSEL  CONTROLLER-END-------->
+
+                
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                     <img src="images/image1.jpg" class="d-block w-100" alt="...">
@@ -72,14 +97,21 @@
                     <img src="images/image3.jpg" class="d-block w-100" alt="...">
                   </div>
                 </div>
+
+                  <!---THIS   IS   A  SIDE OF   CAROUSEL    LEFT  SIDE at the       BOTTOM ----->
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                   <span class="visually-hidden">Previous</span>
                 </button>
+
+                  <!---THIS   IS   A  SIDE OF   CAROUSEL  RIGHT    SIDE  at the         BOTTOM----->
+
                 <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
                   <span class="visually-hidden">Next</span>
                 </button>
+
+
               </div>
         </div>
 <!--carousel End Here-->
